Split mail in API and Impl (#541)
Signed-off-by: Jorge Bescos Gascon <jorge.bescos.gascon@oracle.com>
Co-authored-by: Lukas Jungmann <lukas.jungmann@oracle.com>