@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2009, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -18,8 +18,7 @@ package com.sun.mail.imap;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-
-import com.sun.mail.util.BASE64DecoderStream;
+import java.util.Base64;
 
 /**
  * Handle IMAP connection with PLAIN authentication.
@@ -46,7 +45,7 @@ public class IMAPPlainHandler extends IMAPHandler {
 	    cont("");
 	    ir = readLine();
 	}
-	String auth = new String(BASE64DecoderStream.decode(
+	String auth = new String(Base64.getDecoder().decode(
 				    ir.getBytes(StandardCharsets.US_ASCII)),
 				StandardCharsets.UTF_8);
 	String[] ap = auth.split("\000");
